refactoring with below fixes - max width for grid container - remove % width for grid items - reassign width % for desktop view - spacing adjustment per design

--- a/styles/style.css
+++ b/styles/style.css
@@ -65,12 +65,18 @@ img {
 
 body {
   background-color: var(--clr-violet);
+  /* debugging purpose only */
+  /* background-color: rgb(0, 157, 255); */
   background-image: url("../images/bg-mobile.svg");
   background-repeat: no-repeat;
   background-position: top left;
 }
 
 .grid-container {
+  /* fix the grid container size */
+  max-width: 120em;
+  /* place grid container in the center */
+  margin: 2rem auto;
   display: grid;
   grid-template-columns: 1fr;
   gap: 4rem;
@@ -141,36 +147,47 @@ body {
 
 /* -------- Desktop 2nd approach -------- */
 
+body {
+  /* center the grid container */
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
+
 @media screen and (min-width: 40em) {
   .grid-container {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 71rem 45rem;
     grid-template-areas:
       "header-image-container ."
       "side-image-card info-card"
       ". social-card";
+    gap: 2rem;
   }
 
   .info-card {
     justify-items: start;
     gap: 1rem;
-    grid-template-rows: 15rem 10rem 5rem;
+    /* adjust row size based on design */
+    grid-template-rows: 10rem 9rem 5rem;
+    margin-top: 3rem;
   }
 
   .info-card__header {
-    width: 65%;
+    /* overwrite value from mobile width */
+    width: 100%;
     font-size: 3.5rem;
     line-height: 5rem;
-    align-self: end;
     text-align: start;
   }
 
   .info-card__description {
     text-align: start;
-    width: 65%;
+    /* overwrite value from mobile width */
+    width: 100%;
   }
 
   .info-card__button-cta {
-    width: 25%;
+    width: 35%;
   }
 }
 
